10075 - bugfix ff3 - form alignment - left
git-svn-id: file:///svn/branches/AMP_2_0_RELEASE@15233 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp.css
@@ -390,3 +390,7 @@ td.addUserButContainer input	{background-color: #5E8AD1;
     font-weight: bold;
     height: 25px;
     padding: 3px 5px;}
+	.ampFormContainer
+	{width:1000px;
+	margin:0 auto;
+	text-align:left;}
